@@ -1,3 +1,8 @@
+2010-05-08  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/spModels.R (model.spmatrix): deal with "AsIs" components
+	* tests/spModel.matrix.R: test that
+
 2010-05-01  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/condest.R (onenormest, condest): allow to estimate condition
